# playto-assignment

./: .env.example  COMMANDS.md  DAY1.md  DAY2.md  DAY3.md  DEPLOYMENT.md  EXPLAINER.md  Makefile  README.md  planning.md  pyproject.toml
.github/workflows/: drain.yml
backend/: requirements.txt  seed.py  smoke_test.py
backend/idempotency/: apps.py  models.py  service.py
backend/idempotency/migrations/: 0001_initial.py  0002_initial.py  0003_alter_idempotencykey_response_body.py
backend/ledger/: models.py
backend/ledger/management/commands/: seed_demo.py
backend/ledger/migrations/: 0001_initial.py  0002_initial.py
backend/payouts/: models.py  serializers.py  state.py  tasks.py  urls.py  views.py
backend/payouts/management/commands/: drain_payouts.py
backend/payouts/migrations/: 0001_initial.py
backend/playto/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_concurrency.py  test_idempotency.py
frontend/: .env.example  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css
