[project]
name = "playto-payout"
version = "0.1.0"
description = "Playto Pay payout engine — founding engineer challenge"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.1",
    "celery>=5.3",
    "redis>=5.0",
    "django-celery-beat>=2.6",
    "python-dotenv>=1.0",
    # Production extras
    "gunicorn>=22.0",
    "whitenoise>=6.6",
    "dj-database-url>=2.2",
    "django-cors-headers>=4.4",
]

[tool.uv]
package = false

[tool.django]
project_dir = "backend"
